--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -70,8 +70,8 @@ jobs:
         include:
           - runs-on: ubuntu-22.04
             arch: x86_64
-          - runs-on: [self-hosted, linux, ARM64]
-            arch: arm64
+          - runs-on: macos-12
+            arch: x86_64
           - runs-on: windows-2022
             arch: x86_64
     continue-on-error: true
