--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -143,7 +143,7 @@ jobs:
           "PATH=$env:PATH" | Out-File -FilePath $env:GITHUB_ENV -Append
 
       - name: Setup cmake (Linux)
-        if: runner.os == 'Linux' && runner.arch != 'arm64'
+        if: runner.os == 'Linux' && matrix.arch != 'arm64'
         uses: jwlawson/actions-setup-cmake@v1.14
         with:
           cmake-version: "3.19.x"
@@ -174,7 +174,7 @@ jobs:
         with:
           # downloaded with platform/node/cmake/module.cmake
           path: build/headers
-          key: ${{ runner.os }}-${{ runner.arch }}-cmake-node-module-deps
+          key: ${{ runner.os }}-${{ matrix.arch }}-cmake-node-module-deps
 
       - name: Configure maplibre-native (MacOS)
         if: runner.os == 'MacOS'
@@ -235,7 +235,7 @@ jobs:
           cmake --build build
 
       - name: Publish X64 Release to Github
-        if: runner.arch == 'x86_64'
+        if: matrix.arch == 'x86_64'
         env:
           PUBLISH: true
           BUILDTYPE: RelWithDebInfo
@@ -244,7 +244,7 @@ jobs:
           ./platform/node/scripts/publish.sh
 
       - name: Publish ARM Release to Github
-        if: runner.arch == 'arm64'
+        if: matrix.arch == 'arm64'
         env:
           PUBLISH: true
           BUILDTYPE: RelWithDebInfo
