--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -26,11 +26,15 @@ jobs:
         id: check
         run: |
           latestNpmPackageVersion="$( npm view @acalcutt/maplibre-gl-native versions --json | jq '.[-1]' -r )"
+          echo "latestNpmPackageVersion: $latestNpmPackageVersion"
           currentVersion="$( node -e "console.log(require('./package.json').version)" )"
+          echo "currentVersion: $currentVersion"
           if [ "$latestNpmPackageVersion" == "$currentVersion" ]; then
-            echo "changed=false" >> $GITHUB_OUTPUT
+            echo "changed=false" >> "$GITHUB_OUTPUT"
+            echo "changed=false"
           else
-            echo "changed=true" >> $GITHUB_OUTPUT
+            echo "changed=true" >> "$GITHUB_OUTPUT"
+            echo "changed=true"
           fi
           
     outputs:
