--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -25,11 +25,11 @@ jobs:
       - name: Check if version changed
         id: check
         run: |
-          latestNpmPackageVersion="$( npm view @acalcutt/maplibre-gl-native versions --json | jq '.[-1]' -r )"
-          echo "latestNpmPackageVersion: $latestNpmPackageVersion"
           currentVersion="$( node -e "console.log(require('./package.json').version)" )"
           echo "currentVersion: $currentVersion"
-          if [ "$latestNpmPackageVersion" == "$currentVersion" ]; then
+          isPublished="$( npm view @acalcutt/maplibre-gl-native versions --json | jq -c --arg cv '$currentVersion' 'any(. == $cv)' )"
+          echo "isPublished: $isPublished"
+          if [ "$isPublished" == "true" ]; then
             echo "changed=false" >> "$GITHUB_OUTPUT"
             echo "changed=false"
           else
