--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -26,17 +26,15 @@ jobs:
         id: check
         run: |
           currentVersion="$( node -e "console.log(require('./package.json').version)" )"
-          echo "currentVersion: $currentVersion"
           isPublished="$( npm view @acalcutt/maplibre-gl-native versions --json | jq -c --arg cv '$currentVersion' 'any(. == $cv)' )"
-          echo "isPublished: $isPublished"
           if [ "$isPublished" == "true" ]; then
             echo "changed=false" >> "$GITHUB_OUTPUT"
-            echo "changed=false"
           else
             echo "changed=true" >> "$GITHUB_OUTPUT"
-            echo "changed=true"
           fi
-          
+          echo "currentVersion: $currentVersion"
+          echo "isPublished: $isPublished"
+          echo "$GITHUB_OUTPUT"
     outputs:
       publish: ${{ steps.check.outputs.changed }}
 
