reformat published flag

--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -26,22 +26,16 @@ jobs:
         id: check
         run: |
           currentVersion="$( node -e "console.log(require('./package.json').version)" )"
-          echo "currentVersion: $currentVersion"
           isPublished="$( npm view @acalcutt/maplibre-gl-native-test versions --json | jq -c --arg cv $currentVersion 'any(. == $cv)' )"
+          echo "published=$isPublished" >> "$GITHUB_OUTPUT"
+          echo "currentVersion: $currentVersion"
           echo "isPublished: $isPublished"
-          if [ "$isPublished" == "true" ]; then
-            echo "publish=false" >> "$GITHUB_OUTPUT"
-            echo "publish=false"
-          else
-            echo "publish=true" >> "$GITHUB_OUTPUT"
-            echo "publish=true"
-          fi
     outputs:
-      publish: ${{ steps.check.outputs.publish }}
+      published: ${{ steps.check.outputs.published }}
 
   publish_binaries:
     needs: release-check
-    if: ${{ needs.release-check.outputs.publish == 'true' }}
+    if: ${{ needs.release-check.outputs.published == 'false' }}
     runs-on: ${{ matrix.runs-on }}
     strategy:
       fail-fast: false
