--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -26,7 +26,7 @@ jobs:
         id: check
         run: |
           currentVersion="$( node -e "console.log(require('./package.json').version)" )"
-          isPublished="$( npm view @acalcutt/maplibre-gl-native-test versions --json | jq -c --arg cv $currentVersion 'any(. == $cv)' )"
+          isPublished="$( npm view @acalcutt/maplibre-gl-native-test versions --json | jq -c --arg cv "$currentVersion" 'any(. == "$cv")' )"
           echo "published=$isPublished" >> "$GITHUB_OUTPUT"
           echo "currentVersion: $currentVersion"
           echo "isPublished: $isPublished"
