--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -266,6 +266,28 @@ jobs:
           RELEASE_TYPE="$(node -e "console.log(require('semver').prerelease('${{ steps.package-version.outputs.current-version }}') ? 'prerelease' : 'regular')")"
           echo "release_type=$RELEASE_TYPE" >> $GITHUB_OUTPUT
 
+      - name: Build Release Notes
+        id: release_notes
+        if: ${{ steps.prepare_release.outputs.release_type == 'regular' }}
+        run: |
+          RELEASE_NOTES_PATH="${PWD}/release_notes.txt"
+          ./scripts/release-notes-node.js > ${RELEASE_NOTES_PATH}
+          echo "release_notes=${RELEASE_NOTES_PATH}" >> $GITHUB_OUTPUT
+
+      - name: Update Release Notes (release)
+        id: create_regular_release
+        if: ${{ steps.prepare_release.outputs.release_type == 'regular' }}
+        uses: ncipollo/release-action@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag: node_v${{ steps.package-version.outputs.current-version }}
+          name: node_v${{ steps.package-version.outputs.current-version }}
+          bodyFile: ${{ steps.release_notes.outputs.release_notes }}
+          allowUpdates: true
+          draft: false
+          prerelease: false
+
       - name: Publish to NPM (release)
         if: ${{ steps.prepare_release.outputs.release_type == 'regular' }}
         run: |
