--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -58,6 +58,10 @@ jobs:
       - name: npm ci
         run: npm ci --ignore-scripts
 
+      - name: Pack
+        run: |
+          npm pack --dry-run
+
       - name: Prepare release
         id: prepare_release
         run: |
