--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -86,7 +86,7 @@ jobs:
         if: ${{ steps.prepare_release.outputs.release_type == 'regular' }}
         uses: ncipollo/release-action@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.NODE_PRE_GYP_GITHUB_TOKEN }}
         with:
           tag: node_v${{ steps.package-version.outputs.current-version }}
           name: node_v${{ steps.package-version.outputs.current-version }}
@@ -100,7 +100,7 @@ jobs:
         if: ${{ steps.prepare_release.outputs.release_type == 'prerelease' }}
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.NODE_PRE_GYP_GITHUB_TOKEN }}
         with:
           tag: node_v${{ steps.package-version.outputs.current-version }}
           name: node_v${{ steps.package-version.outputs.current-version }}
