--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -64,6 +64,13 @@ jobs:
           RELEASE_TYPE="$(node -e "console.log(require('semver').prerelease('${{ steps.package-version.outputs.current-version }}') ? 'prerelease' : 'regular')")"
           echo "release_type=$RELEASE_TYPE" >> $GITHUB_OUTPUT
 
+      - name: Tag commit and push
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          custom_tag: node_v${{ steps.package-version.outputs.current-version }}
+
       - name: Build Release Notes
         id: release_notes
         if: ${{ steps.prepare_release.outputs.release_type == 'regular' }}
@@ -73,23 +80,15 @@ jobs:
           ./scripts/release-notes-node.js > ${RELEASE_NOTES_PATH}
           echo "release_notes=${RELEASE_NOTES_PATH}" >> $GITHUB_OUTPUT
 
-      - name: ls
-        run: |
-         ls -l
-         RELEASE_NOTES_PATH="${PWD}/release_notes.txt"
-         echo $RELEASE_NOTES_PATH
-         cat $RELEASE_NOTES_PATH
-
-
       - name: Create GitHub Release (regular)
         id: create_regular_release
         if: ${{ steps.prepare_release.outputs.release_type == 'regular' }}
         uses: ncipollo/release-action@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.NODE_PRE_GYP_GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag: node_v${{ steps.package-version.outputs.current-version }}
-          name: node_v${{ steps.package-version.outputs.current-version }}
+          tag: ${{ steps.tag_version.outputs.new_tag }}
+          name: ${{ steps.tag_version.outputs.new_tag }}
           bodyFile: ${{ steps.release_notes.outputs.release_notes }}
           allowUpdates: true
           draft: false
