add write permission

--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -38,6 +38,8 @@ jobs:
     needs: release-check
     if: ${{ needs.release-check.outputs.published == 'false' }}
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     defaults:
       run:
         shell: bash
