--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -72,6 +72,7 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           custom_tag: node_v${{ steps.package-version.outputs.current-version }}
+          WITH_V: false
 
       - name: Build Release Notes
         id: release_notes
