--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -66,14 +66,6 @@ jobs:
           RELEASE_TYPE="$(node -e "console.log(require('semver').prerelease('${{ steps.package-version.outputs.current-version }}') ? 'prerelease' : 'regular')")"
           echo "release_type=$RELEASE_TYPE" >> $GITHUB_OUTPUT
 
-      - name: Tag commit and push
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v6.1
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          custom_tag: node_v${{ steps.package-version.outputs.current-version }}
-          WITH_V: false
-
       - name: Build Release Notes
         id: release_notes
         if: ${{ steps.prepare_release.outputs.release_type == 'regular' }}
@@ -90,8 +82,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag: ${{ steps.tag_version.outputs.new_tag }}
-          name: ${{ steps.tag_version.outputs.new_tag }}
+          tag: node_v${{ steps.package-version.outputs.current-version }}
+          name: node_v${{ steps.package-version.outputs.current-version }}
           bodyFile: ${{ steps.release_notes.outputs.release_notes }}
           allowUpdates: true
           draft: false
