fix tag name, try to use GITHUB_TOKEN

--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -37,6 +37,8 @@ jobs:
     needs: release-check
     if: ${{ needs.release-check.outputs.published == 'false' }}
     runs-on: ${{ matrix.runs-on }}
+    permissions:
+      contents: write
     strategy:
       fail-fast: false
       matrix:
@@ -221,7 +223,7 @@ jobs:
         env:
           PUBLISH: true
           BUILDTYPE: RelWithDebInfo
-          NODE_PRE_GYP_GITHUB_TOKEN: ${{ secrets.NODE_PRE_GYP_GITHUB_TOKEN }}
+          NODE_PRE_GYP_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           ./platform/node/scripts/publish.sh
 
@@ -230,7 +232,7 @@ jobs:
         env:
           PUBLISH: true
           BUILDTYPE: RelWithDebInfo
-          NODE_PRE_GYP_GITHUB_TOKEN: ${{ secrets.NODE_PRE_GYP_GITHUB_TOKEN }}
+          NODE_PRE_GYP_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           ./platform/node/scripts/publish.sh --target_arch=arm64
 
@@ -282,8 +284,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag: node_v${{ steps.package-version.outputs.current-version }}
-          name: node_v${{ steps.package-version.outputs.current-version }}
+          tag: node-v${{ steps.package-version.outputs.current-version }}
+          name: node-v${{ steps.package-version.outputs.current-version }}
           bodyFile: ${{ steps.release_notes.outputs.release_notes }}
           allowUpdates: true
           draft: false
@@ -296,8 +298,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag: node_v${{ steps.package-version.outputs.current-version }}
-          name: node_v${{ steps.package-version.outputs.current-version }}
+          tag: node-v${{ steps.package-version.outputs.current-version }}
+          name: node-v${{ steps.package-version.outputs.current-version }}
           bodyFile: ${{ steps.release_notes.outputs.release_notes }}
           allowUpdates: true
           draft: false
