--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -293,12 +293,14 @@ jobs:
       - name: Update Release Notes (prerelease)
         id: create_prerelease
         if: ${{ steps.prepare_release.outputs.release_type == 'prerelease' }}
-        uses: actions/create-release@v1
+        uses: ncipollo/release-action@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: node-v${{ steps.package-version.outputs.current-version }}
-          release_name: node-v${{ steps.package-version.outputs.current-version }}
+          tag: node-v${{ steps.package-version.outputs.current-version }}
+          name: node-v${{ steps.package-version.outputs.current-version }}
+          bodyFile: ${{ steps.release_notes.outputs.release_notes }}
+          allowUpdates: true
           draft: false
           prerelease: true
 
