--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -277,7 +277,7 @@ jobs:
           awk '/^##/ { p = 0 }; p == 1 { print }; $0 == "## {{ env.version }}" { p = 1 };' platform/node/CHANGELOG.md > changelog_for_version.md
           cat changelog_for_version.md
 
-      - name: Update Release Notes (release)
+      - name: Update Release Notes
         id: create_regular_release
         uses: ncipollo/release-action@v1
         env:
