--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@acalcutt/maplibre-gl-native-test",
-  "version": "5.2.8",
+  "version": "5.2.9-pre.0",
   "description": "Renders map tiles with MapLibre Native",
   "keywords": [
     "maplibre",
