--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -274,7 +274,7 @@ jobs:
 
       - name: Extract changelog for version
         run: |
-          awk '/^##/ { p = 0 }; p == 1 { print }; $0 == "## {{ env.version }}" { p = 1 };' platform/node/CHANGELOG.md > changelog_for_version.md
+          awk '/^##/ { p = 0 }; p == 1 { print }; $0 == "## {{ steps.package-version.outputs.current-version }}" { p = 1 };' platform/node/CHANGELOG.md > changelog_for_version.md
           cat changelog_for_version.md
 
       - name: Update Release Notes
