change env variable, test ls

--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -274,8 +274,10 @@ jobs:
 
       - name: Extract changelog for version
         run: |
-          awk '/^##/ { p = 0 }; p == 1 { print }; $0 == "## {{ steps.package-version.outputs.current-version }}" { p = 1 };' platform/node/CHANGELOG.md > changelog_for_version.md
+          awk '/^##/ { p = 0 }; p == 1 { print }; $0 == "## ${{ steps.package-version.outputs.current-version }}" { p = 1 };' platform/node/CHANGELOG.md > changelog_for_version.md
           cat changelog_for_version.md
+          ls
+          ls platform/node/
 
       - name: Update Release Notes
         id: create_regular_release
