--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - opengl-2
+      - opengl-2-pr3-1_test
     tags:
       - "node-*"
     paths:
@@ -70,12 +70,8 @@ jobs:
         include:
           - runs-on: ubuntu-22.04
             arch: x86_64
-          - runs-on: [self-hosted, linux, ARM64]
-            arch: arm64
           - runs-on: macos-12
             arch: x86_64
-          - runs-on: [self-hosted, macOS, ARM64]
-            arch: arm64
           - runs-on: windows-2022
             arch: x86_64
     continue-on-error: true
