--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -45,11 +45,9 @@ jobs:
         include:
           - runs-on: ubuntu-22.04
             arch: x86_64
-          - runs-on: [self-hosted, linux, ARM64]
-            arch: arm64
           - runs-on: macos-12
             arch: x86_64
-          - runs-on: [self-hosted, macOS, ARM64]
+          - runs-on: macos-14
             arch: arm64
           - runs-on: windows-2022
             arch: x86_64
@@ -242,9 +240,52 @@ jobs:
         run: |
           ./platform/node/scripts/publish.sh --target_arch=arm64
 
+  publish_binary_linux_arm64:
+    runs-on: macos-14
+    needs: release-check
+    name: publish_binary (ubuntu-22.04, arm64)
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          submodules: recursive
+          fetch-depth: 0
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Create the docker build image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          platforms: linux/arm64
+          file: platform/node/scripts/Dockerfile_Build
+          tags: build
+          push: false
+          load: true
+
+      - name: Run the docker build image and create node libs
+        run:  docker run --rm -v $(pwd):/data build
+
+      - name: Use Node.js from nvmrc
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: '.nvmrc'
+
+      - name: npm ci
+        run: npm ci --ignore-scripts
+
+      - name: Publish ARM Release to Github
+        env:
+          PUBLISH: true
+          BUILDTYPE: RelWithDebInfo
+          NODE_PRE_GYP_GITHUB_TOKEN: ${{ secrets.NODE_PRE_GYP_GITHUB_TOKEN }}
+        run: |
+          ./platform/node/scripts/publish.sh --target_platform=linux --target_arch=arm64
+
   publish_npm:
     runs-on: ubuntu-latest
-    needs: publish_binaries
+    needs: [publish_binaries, publish_binary_linux_arm64]
     permissions:
       contents: write
     defaults:
