--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -2,7 +2,7 @@ name: node-release
 
 on:
   push:
-    branches: [opengl-2]
+    branches: [m1-runner]
   workflow_dispatch:
 
 jobs:
@@ -26,7 +26,7 @@ jobs:
         id: check
         run: |
           currentVersion="$( node -e "console.log(require('./package.json').version)" )"
-          isPublished="$( npm view @maplibre/maplibre-gl-native versions --json | jq -c --arg cv "$currentVersion" 'any(. == $cv)' )"
+          isPublished="$( npm view @acalcutt/maplibre-gl-native-test versions --json | jq -c --arg cv "$currentVersion" 'any(. == $cv)' )"
           echo "published=$isPublished" >> "$GITHUB_OUTPUT"
           echo "currentVersion: $currentVersion"
           echo "isPublished: $isPublished"
