--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@acalcutt/maplibre-gl-native-test",
-  "version": "5.3.1",
+  "version": "5.3.2-pre.0",
   "description": "Renders map tiles with Maplibre GL",
   "keywords": [
     "maplibre",
