allow publish to my test package

--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -4,9 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches:
-      - main
-      - topic/drawable
-      - node-*.*.x
+      - move-node-test
     tags:
       - "node-*"
     paths:
