--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -46,8 +46,8 @@ jobs:
         include:
           - runs-on: ubuntu-22.04
             arch: x86_64
-          - runs-on: [self-hosted, linux, ARM64]
-            arch: arm64
+          # - runs-on: [self-hosted, linux, ARM64]
+          #   arch: arm64
           # Disabled until Metal backend is complete
           # A release for macOS can be made from the opengl-2 branch
           # - runs-on: macos-12
