--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -280,6 +280,7 @@ jobs:
 
       - name: Prepare release
         id: prepare_release
+        working-directory: platform/node
         run: |
           RELEASE_TYPE="$(node -e "console.log(require('semver').prerelease('${{ steps.package-version.outputs.current-version }}') ? 'prerelease' : 'regular')")"
           if [[ $RELEASE_TYPE == 'regular' ]]; then
@@ -289,8 +290,9 @@ jobs:
           fi
 
       - name: Extract changelog for version
+        working-directory: platform/node
         run: |
-          awk '/^##/ { p = 0 }; p == 1 { print }; $0 == "## ${{ steps.package-version.outputs.current-version }}" { p = 1 };' platform/node/CHANGELOG.md > changelog_for_version.md
+          awk '/^##/ { p = 0 }; p == 1 { print }; $0 == "## ${{ steps.package-version.outputs.current-version }}" { p = 1 };' CHANGELOG.md > changelog_for_version.md
           cat changelog_for_version.md
 
       - name: Update Release Notes
