--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -271,9 +271,10 @@ jobs:
           node-version-file: '.nvmrc'
 
       - name: Get version
-        working-directory: platform/node
         id: package-version
         uses: martinbeentjes/npm-get-version-action@v1.3.1
+        with:
+          path: platform/node/package.json
 
       - name: npm ci
         working-directory: platform/node
