--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -274,7 +274,7 @@ jobs:
         id: package-version
         uses: martinbeentjes/npm-get-version-action@v1.3.1
         with:
-          path: platform/node/package.json
+          path: platform/node
 
       - name: npm ci
         working-directory: platform/node
