--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -2,7 +2,7 @@ name: node-release
 
 on:
   push:
-    branches: [main]
+    branches: [fix_pubish2_test]
   workflow_dispatch:
 
 jobs:
@@ -27,7 +27,7 @@ jobs:
         working-directory: platform/node
         run: |
           currentVersion="$( node -e "console.log(require('./package.json').version)" )"
-          isPublished="$( npm view @maplibre/maplibre-gl-native versions --json | jq -c --arg cv "$currentVersion" 'any(. == $cv)' )"
+          isPublished="$( npm view @acalcutt/maplibre-gl-native-test versions --json | jq -c --arg cv "$currentVersion" 'any(. == $cv)' )"
           echo "published=$isPublished" >> "$GITHUB_OUTPUT"
           echo "currentVersion: $currentVersion"
           echo "isPublished: $isPublished"
@@ -46,8 +46,6 @@ jobs:
         include:
           - runs-on: ubuntu-22.04
             arch: x86_64
-          - runs-on: [self-hosted, linux, ARM64]
-            arch: arm64
           - runs-on: macos-14
             arch: arm64
           - runs-on: macos-14-large
