--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -48,7 +48,7 @@ jobs:
             arch: x86_64
           - runs-on: macos-14
             arch: arm64
-          - runs-on: macos-14-large
+          - runs-on: macos-13
             arch: x86_64
           - runs-on: windows-2022
             arch: x86_64
