--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -206,14 +206,15 @@ jobs:
         run: |
           cmake . -B build \
             -G Ninja \
-            -DCMAKE_BUILD_TYPE=${{ env.BUILDTYPE }} \
+            -DCMAKE_BUILD_TYPE=Debug \
             -DCMAKE_CXX_COMPILER_LAUNCHER=ccache \
             -DMLN_WITH_NODE=ON \
             -DMLN_WITH_OPENGL=OFF \
             -DMLN_WITH_METAL=ON \
             -DMLN_LEGACY_RENDERER=OFF \
             -DMLN_DRAWABLE_RENDERER=ON \
-            -DMLN_WITH_WERROR=OFF
+            -DMLN_WITH_WERROR=OFF \
+            -DMLN_USE_TRACY=ON
 
       - name: Configure maplibre-native (Linux)
         if: runner.os == 'Linux'
