--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -213,8 +213,7 @@ jobs:
             -DMLN_WITH_METAL=ON \
             -DMLN_LEGACY_RENDERER=OFF \
             -DMLN_DRAWABLE_RENDERER=ON \
-            -DMLN_WITH_WERROR=OFF \
-            -DMLN_USE_TRACY=ON
+            -DMLN_WITH_WERROR=OFF
 
       - name: Configure maplibre-native (Linux)
         if: runner.os == 'Linux'
