--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -176,7 +176,7 @@ jobs:
         run: |
           cmake . -B build \
             -G Ninja \
-            -DCMAKE_BUILD_TYPE=${{ env.BUILDTYPE }} \
+            -DCMAKE_BUILD_TYPE=Debug \
             -DCMAKE_CXX_COMPILER_LAUNCHER=ccache \
             -DMLN_WITH_NODE=ON \
             -DMLN_WITH_OPENGL=OFF \
