--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -2,7 +2,7 @@ name: node-release
 
 on:
   push:
-    branches: [main]
+    branches: [ai-fixes]
   workflow_dispatch:
 
 jobs:
@@ -46,11 +46,9 @@ jobs:
         include:
           - runs-on: ubuntu-22.04
             arch: x86_64
-          - runs-on: MapLibre_Native_Ubuntu_22_04_ARM_8_core
-            arch: arm64
           - runs-on: macos-14
             arch: arm64
-          - runs-on: macos-14-large
+          - runs-on: macos-13
             arch: x86_64
           - runs-on: windows-2022
             arch: x86_64
