--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - main
       - topic/drawable
-      - node-*.*.x
+      - ai-fixes-2
     tags:
       - "node-*"
     paths:
@@ -76,11 +76,9 @@ jobs:
         include:
           - runs-on: ubuntu-22.04
             arch: x86_64
-          - runs-on: MapLibre_Native_Ubuntu_22_04_ARM_8_core
-            arch: arm64
           - runs-on: macos-14
             arch: arm64
-          - runs-on: macos-14-large
+          - runs-on: macos-13
             arch: x86_64
           - runs-on: windows-2022
             arch: x86_64
