--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "maplibre-native",
-  "version": "5.4.0",
+  "version": "6.0.1-pre.7",
   "description": "",
   "keywords": [],
   "files": [],
