new test release v6.1.1-pre.2

--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -2,7 +2,7 @@ name: node-release
 
 on:
   push:
-    branches: [CREATE_AUTORELEASEPOOL]
+    branches: [node_test_7-28]
   workflow_dispatch:
 
 jobs:
