--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -100,8 +100,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v4
         with:
-          submodules: recursive
-          fetch-depth: 1
+          submodules: true
 
       - name: Get OS Architecture
         if: runner.os == 'MacOS' || runner.os == 'Linux'
@@ -159,13 +158,6 @@ jobs:
           $env:PATH = $env:PATH -replace "C:\\Strawberry\\c\\bin;", ""
           "PATH=$env:PATH" | Out-File -FilePath $env:GITHUB_ENV -Append
 
-      - name: Setup cmake
-        # linux arm not supported https://github.com/jwlawson/actions-setup-cmake/issues/79
-        if: ${{contains(runner.name, 'GitHub Actions') && matrix.runs-on != 'ubuntu-22.04-arm' }}
-        uses: jwlawson/actions-setup-cmake@802fa1a2c4e212495c05bf94dba2704a92a472be # v2.0.2
-        with:
-          cmake-version: '3.31'
-
       - name: cmake version
         run: |
           cmake --version
@@ -214,19 +206,23 @@ jobs:
             -DMLN_WITH_NODE=ON \
             -DMLN_WITH_OPENGL=ON
 
-      - name: Get vcpkg commit id
+      - name: "Create directory '${{ github.workspace }}/platform/windows/vendor/vcpkg/bincache' (Windows)"
         if: runner.os == 'Windows'
-        shell: pwsh
-        run: |
-          $vcpkg_commit_id = ($(git submodule status .\platform\windows\vendor\vcpkg).Trim() -split ' ')[0]
-          Add-Content -Path $env:GITHUB_ENV -Value "VCPKG_COMMIT_ID=${vcpkg_commit_id}"
+        run: mkdir -p ${{ github.workspace }}/platform/windows/vendor/vcpkg/bincache
+        shell: bash
 
-      - name: Restore vcpkg binary cache
+      - name: Restore vcpkg cache (Windows)
         if: runner.os == 'Windows'
-        uses: actions/cache/restore@0400d5f644dc74513175e3cd8d07132dd4860809 # v4.2.4
+        uses: actions/cache@0400d5f644dc74513175e3cd8d07132dd4860809 # v4.2.4
         with:
-          path: ${{ github.workspace }}\platform\windows\vendor\vcpkg\archives
-          key: vcpkg-${{ env.VCPKG_COMMIT_ID }}
+          path: |
+            ${{ github.workspace }}/platform/windows/vendor/vcpkg
+            !${{ github.workspace }}/platform/windows/vendor/vcpkg/buildtrees
+            !${{ github.workspace }}/platform/windows/vendor/vcpkg/packages
+            !${{ github.workspace }}/platform/windows/vendor/vcpkg/downloads
+            !${{ github.workspace }}/platform/windows/vendor/vcpkg/installed
+          key: |
+            ${{ matrix.runs-on }}-${{ env.BUILDTYPE }}-${{ github.job }}-${{ hashFiles( '.git/modules/platform/windows/vendor/vcpkg/HEAD' ) }}-${{ hashFiles( 'platform/windows/Get-VendorPackages.ps1' ) }}
 
       - name: Configure maplibre-native (Windows)
         if: runner.os == 'Windows'
@@ -251,6 +247,10 @@ jobs:
         if: runner.os == 'Windows'
         run: |
           cmake --build build
+
+      - name: Prebuild for debug and testing
+        working-directory: platform/node
+        run: npm run prebuild -- --verbose --debug --strip
 
       - name: Run render tests on macOS
         id: render_tests
