--- a/platform/node/package.json
+++ b/platform/node/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@maplibre/maplibre-gl-native",
-  "version": "6.2.0",
+  "name": "@acalcutt/maplibre-gl-native-test",
+  "version": "6.2.0-pre.1",
   "description": "Renders map tiles with MapLibre Native",
   "keywords": [
     "maplibre",
