--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -9,6 +9,8 @@ jobs:
   release-check:
     name: Check if version is published
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     defaults:
       run:
         shell: bash
