--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -16,8 +16,11 @@ jobs:
         shell: bash
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v4
+
+      - name: Use Node.js
+        uses: actions/setup-node@a0853c24544627f65ddf259abe73b1d18a591444 # v4
         with:
-          fetch-depth: 0
+          node-version-file: 'platform/node/.nvmrc'
 
       - name: Check if version is published
         id: check
