--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -22,6 +22,10 @@ jobs:
         with:
           node-version-file: 'platform/node/.nvmrc'
 
+      - name: npm ci
+        working-directory: platform/node
+        run: npm ci --ignore-scripts
+
       - name: Check if version is published
         id: check
         working-directory: platform/node
