--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -265,7 +265,7 @@ jobs:
             ABI="${ABI_FOLDER##*v}"
             
             # Construct the filename for the tarball, replacing @ and /
-            TARBALL_NAME="$(echo "${{ needs.release-check.outputs.package-name }}" | sed 's/@//g' | sed 's/\//-/g')-v${{ needs.release-check.outputs.current-version }}-node-v${ABI}-${{ runner.os.toLowerCase() }}-${{ runner.arch.toLowerCase() }}.tar.gz"
+            TARBALL_NAME="$(echo "${{ needs.release-check.outputs.package-name }}" | sed 's/@//g' | sed 's/\//-/g')-v${{ needs.release-check.outputs.current-version }}-node-v${ABI}-${{ runner.os }}-${{ runner.arch }}.tar.gz"
             
             echo "Creating tarball: $TARBALL_NAME from folder $ABI_FOLDER"
             
