--- a/.github/workflows/node-release.yml
+++ b/.github/workflows/node-release.yml
@@ -264,8 +264,14 @@ jobs:
           for ABI_FOLDER in lib/node-v*; do
             ABI="${ABI_FOLDER##*v}"
             
+            # Convert to lowercase using bash parameter expansion
+            OS_LOWER="${{ runner.os }}"
+            OS_LOWER="${OS_LOWER,,}"
+            ARCH_LOWER="${{ runner.arch }}"
+            ARCH_LOWER="${ARCH_LOWER,,}"
+            
             # Construct the filename for the tarball, replacing @ and /
-            TARBALL_NAME="$(echo "${{ needs.release-check.outputs.package-name }}" | sed 's/@//g' | sed 's/\//-/g')-v${{ needs.release-check.outputs.current-version }}-node-v${ABI}-${{ runner.os },,}-${{ runner.arch },,}.tar.gz"
+            TARBALL_NAME="$(echo "${{ needs.release-check.outputs.package-name }}" | sed 's/@//g' | sed 's/\//-/g')-v${{ needs.release-check.outputs.current-version }}-node-v${ABI}-${OS_LOWER}-${ARCH_LOWER}.tar.gz"
             
             echo "Creating tarball: $TARBALL_NAME from folder $ABI_FOLDER"
             
